--- a/css/anchi84.css
+++ b/css/anchi84.css
@@ -1,17 +1,53 @@
+body {
+    font: 20px "Inconsolata", sans-serif;
+    line-height: 1.8;
+    color: #f5f6f7;
+}
+
+p {
+    font-size: 1em;
+}
+
+
 .bg-1 {
-    background-color: #1abc9c;
-    /* Green */
+    background: linear-gradient(#474e5d, #1abc9c);
     color: #ffffff;
 }
 
 .bg-2 {
-    background-color: #474e5d;
-    /* Dark Blue */
+    background-color: #1abc9c;
     color: #ffffff;
 }
 
 .bg-3 {
-    background-color: #ffffff;
-    /* White */
-    color: #555555;
+    background: linear-gradient( #1abc9c, #474e5d);
+    color: #ffffff;
+}
+
+.bg-4 {
+    background-color: #474e5d;
+    color: #ffffff;
+}
+
+.container-fluid {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
+
+.navbar-nav li a:hover {
+    color: #1abc9c !important;
+}
+
+a {
+    color: darkblue;
 }
