--- a/css/anchi84.css
+++ b/css/anchi84.css
@@ -10,28 +10,31 @@ p {
 
 
 .bg-1 {
-    background: linear-gradient(#474e5d, #1abc9c);
+    background: #43cea2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(#185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(#185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #ffffff;
 }
 
 .bg-2 {
-    background-color: #1abc9c;
+    background-color: #43cea2;
     color: #ffffff;
 }
 
 .bg-3 {
-    background: linear-gradient( #1abc9c, #474e5d);
+    background: #43cea2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(#43cea2, #185a9d);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(#43cea2, #185a9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #ffffff;
 }
 
 .bg-4 {
-    background-color: #474e5d;
-    color: #ffffff;
+    color: #7e7a7a;
 }
 
 .container-fluid {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .navbar {
